--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ if (UNIX)
 	add_definitions(-DUNIX)
 	add_definitions(-fPIC)
 endif(UNIX)
-if(WIN32 AND NOT DEFINED CMAKE_INSTALL_PREFIX)
+if(WIN32)
 	set(CMAKE_INSTALL_PREFIX "C:/sire/sire-1.0")
-endif(WIN32 AND NOT DEFINED CMAKE_INSTALL_PREFIX)
+endif(WIN32)
 
 if(WIN32)
 	add_definitions(-D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING -D_CRT_SECURE_NO_WARNINGS)
